--- a/src/App.css
+++ b/src/App.css
@@ -22,12 +22,12 @@ h6 {
   flex-direction: column;
   justify-content: center;
   margin: auto;
-  max-width: 60%;
+  max-width: 75%;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   #wrap {
-    max-width: 90%;
+    max-width: 85%;
   }
 }
 
